Add configurable memory decay and WOM experiments